--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "blog",
+  "homepage": "/react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -40,6 +41,7 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "proxy": "http://localhost:5000/"
   }
 }
